--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="https://drive.google.com/file/d/1ra4SVVcT7y2_PhbGDctLFrBrhoMeGau1/view" class="logo">my resume</a>
+						<a href="https://drive.google.com/file/d/1BB9LTGYgIfgQTVTyL-B0CFhnygPe8zIE/view?usp=sharing" class="logo">my resume</a>
 					</header>
 
 				<!-- Nav -->
@@ -78,6 +78,19 @@
 										<li><a href="https://github.com/abhisheikkh/Projects/tree/master/HOSPITALITY" class="button">View Project on github</a></li>
 									</ul>
 								</article>
+								<article>
+                                    <header>
+                                        <span class="date">April 18, 2017</span>
+                                        <h2><a href="#">Ante mattis<br />
+                                        interdum dolor</a></h2>
+                                    </header>
+                                    <a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+                                    <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+                                    <ul class="actions special">
+                                        <li><a href="#" class="button">Full Story</a></li>
+                                    </ul>
+                                </article>
+
 															</section>
 
 						<!-- Footer -->
